fix(mascotas): correcciones SonarQube y nuevo endpoint GET /{id}/foto
- Constructor injection en MascotaMatcherClient, KafkaProducerService y NotificacionMatchService
- Corrige multi-catch inválido (WebClientResponseException.NotFound | Exception) en MascotasServiceImpl
- Fusiona @SuppressWarnings duplicados en SecurityConfig (S112, S1130, S4502, S4834)
- Suprime hotspot de seguridad CSRF/permitAll (microservicio interno detrás del gateway)
- Agrega endpoint GET /api/mascotas/{id}/foto que sirve la imagen base64 como bytes
- Stream.toList() en lugar de collect(Collectors.toList())
- LocalDateTime.now(ZoneId.systemDefault()) en KafkaProducerService y NotificacionMatchService
- Constantes MASCOTA_ID, USUARIO_ID, TIMESTAMP en KafkaProducerService
- Nuevos tests: 5 casos para el endpoint /foto, S1117 fix en NotificacionMatchServiceTest

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>